--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "importHelpers": true,
     "target": "es2015",
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "node",
+      "googlemaps"
     ],
     "lib": [
       "es2018",
